--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,11 @@ build-iPhoneSimulator/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+.idea/
+
+/.yardoc
+/Gemfile.lock
+
+
+# rspec failure tracking
+.rspec_status
